kura-parser/src/snapshots/kura_parser__expression__tests__simple_math.snap
---
source: kura-parser/src/expression.rs
expression: math_expr_ast
---
BinaryOp {
    operator: Minus,
    lhs: BinaryOp {
        operator: Plus,
        lhs: IntLiteral {
            value: Unsigned(
                1,
            ),
            size: None,
            location: Location {
                start_byte: 0,
                end_byte: 1,
            },
        },
        rhs: BinaryOp {
            operator: Star,
            lhs: IntLiteral {
                value: Unsigned(
                    2,
                ),
                size: None,
                location: Location {
                    start_byte: 4,
                    end_byte: 5,
                },
            },
            rhs: IntLiteral {
                value: Unsigned(
                    3,
                ),
                size: None,
                location: Location {
                    start_byte: 8,
                    end_byte: 9,
                },
            },
            location: Location {
                start_byte: 4,
                end_byte: 9,
            },
        },
        location: Location {
            start_byte: 0,
            end_byte: 9,
        },
    },
    rhs: IntLiteral {
        value: Unsigned(
            4,
        ),
        size: None,
        location: Location {
            start_byte: 12,
            end_byte: 13,
        },
    },
    location: Location {
        start_byte: 0,
        end_byte: 13,
    },
}
